--- a/requirements.txt
+++ b/requirements.txt
@@ -1,134 +1,39 @@
-absl-py==1.4.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-aniso8601==9.0.1
+altgraph==0.17.3
 asgiref==3.6.0
-asttokens==2.2.1
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==22.2.0
 Babel==2.11.0
-backcall==0.2.0
-botocore==1.29.99
-cachetools==5.3.0
 certifi==2022.12.7
-cffi==1.15.1
 charset-normalizer==3.1.0
 click==8.1.3
-colorama==0.4.6
-comm==0.1.2
-cryptography==40.0.1
-debugpy==1.6.6
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.6
-Django==4.1.7
+Cython==0.29.28
+Django==3.2.6
 django-admin-rangefilter==0.9.0
-django-coupon-management==1.2
-elasticsearch==7.17.9
-elasticsearch-dsl==7.4.1
-executing==1.2.0
-filelock==3.10.4
+dnspython==2.3.0
 Flask==2.2.3
-flatbuffers==23.3.3
-frozenlist==1.3.3
-gast==0.4.0
-geoip2==4.6.0
-google-auth==2.16.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-graphene==3.2.2
-graphene-django==3.0.0b7
-graphql-core==3.2.3
-graphql-relay==3.2.0
-grpcio==1.51.3
 gunicorn==20.1.0
-h5py==3.8.0
 idna==3.4
-ipykernel==6.21.0
-ipython==8.9.0
 itsdangerous==2.1.2
-jax==0.4.6
-jedi==0.18.2
 Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-keras==2.12.0
-libclang==16.0.0
-Markdown==3.4.3
+macholib==1.16.2
 MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-maxminddb==2.2.0
-mpmath==1.3.0
-multidict==6.0.4
-networkx==3.0
-numpy==1.23.5
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.0
-pandas==1.5.3
-parso==0.8.3
-pbr==5.11.1
-pickleshare==0.7.5
+numpy==1.24.2
 Pillow==9.4.0
-platformdirs==2.6.2
-product==0.1.1.1
-promise==2.3
-prompt-toolkit==3.0.36
-protobuf==4.22.1
-psutil==5.9.4
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
 pycryptodome==3.17
 pygame==2.1.3.dev8
-Pygments==2.14.0
-PyJWT==2.6.0
-python-dateutil==2.8.2
-python-decouple==3.8
-python3-openid==3.2.0
+pyinstaller==5.9.0
+pyinstaller-hooks-contrib==2023.1
+pymongo==4.3.3
+pypng==0.20220715.0
+PySimpleGUI==4.60.4
 pytz==2022.7.1
-pywin32==305
-pyzmq==25.0.0
+pyzbar==0.1.9
+qrcode==7.4.2
+razorpay==1.3.0
 requests==2.28.2
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-learn==1.2.2
-scipy==1.10.1
-six==1.16.0
-sklearn==0.0.post1
 sqlparse==0.4.3
-stack-data==0.6.2
-stevedore==5.0.0
 stripe==5.3.0
-sympy==1.11.1
-tensorboard==2.12.0
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.2.0
-text-unidecode==1.3
-threadpoolctl==3.1.0
+tinydb==4.7.1
 tkcalendar==1.6.1
-torch==2.0.0
-torchvision==0.15.1
-tornado==6.2
-traitlets==5.9.0
 typing_extensions==4.5.0
-tzdata==2022.7
 urllib3==1.26.15
-virtualenv==20.21.0
-virtualenv-clone==0.5.7
-virtualenvwrapper==4.8.4
-virtualenvwrapper-win==1.2.7
-wcwidth==0.2.6
 Werkzeug==2.2.3
 whitenoise==6.4.0
-wrapt==1.14.1
-yarl==1.8.2
